# demo_streamlit

./: README.md
salaries/: pyproject.toml
salaries/src/salaries/: __init__.py  app.py
salaries/src/salaries/assets/markdown/: intro_salaries.md  salaries_dashboard_description.md
salaries/src/salaries/components/: charts.py  filters.py  kpis.py
salaries/src/salaries/pages/: dashboard.py  home.py  raw_data.py
salaries/src/salaries/utils/: constants.py  helpers.py
